Finished Income Details_2

--- a/DaeCode.ipynb
+++ b/DaeCode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "healthy-natural",
+   "id": "moderate-biotechnology",
    "metadata": {},
    "source": [
     "# Group Members\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "multiple-hostel",
+   "id": "champion-folder",
    "metadata": {
     "editable": false,
     "nbgrader": {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "horizontal-vitamin",
+   "id": "improved-fruit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "frequent-settle",
+   "id": "practical-disposition",
    "metadata": {},
    "source": [
     "# Relationship between education and income level in South Africa\n",
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reliable-planning",
+   "id": "crazy-brooks",
    "metadata": {},
    "source": [
     "## Data Description\n",
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "infinite-dylan",
+   "id": "guided-division",
    "metadata": {},
    "source": [
     "### Reading in the data"
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "limiting-clone",
+   "id": "annoying-canadian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "threaded-sacrifice",
+   "id": "sophisticated-farmer",
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "certain-kenya",
+   "id": "upset-memorial",
    "metadata": {},
    "source": [
     "As can be seen above the data set has 30 110 entries each with at most 180 filled columns. The pertinent information captured in the dataframe is as follows:\n",
@@ -667,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "furnished-value",
+   "id": "backed-lending",
    "metadata": {},
    "outputs": [
     {
@@ -1348,7 +1348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "intelligent-bangkok",
+   "id": "swiss-annex",
    "metadata": {},
    "source": [
     "Off of the first set of entries it can be seen that all the entries follow a standard that was prioritised during data collection. This also means that the values are consistent and realistic. \n",
@@ -1358,7 +1358,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "formal-residence",
+   "id": "cardiovascular-server",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1373,7 +1373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "touched-extraction",
+   "id": "comparative-volume",
    "metadata": {},
    "source": [
     "As can be seen in the above the information each column has a set data type that is adhered to throughout the dataset, this means the data present follows a set of decided categories, is a value, or is null. Given the above it can be seen that most columns have null values, this is due to the nature of questioning, there are many factors that a participant may not be part of which are then left null. Included in the dataframe are sample entries which contain null values, given that they have unique house_identifier codes they can be cross-referenced to exisitng entries and be removed if they don't match other entries in the dataframe.\n",
@@ -1385,7 +1385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cellular-danish",
+   "id": "resident-measurement",
    "metadata": {},
    "source": [
     "Wrangling TO-DO:\n",
@@ -1400,7 +1400,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "effective-illustration",
+   "id": "entitled-wiring",
    "metadata": {},
    "outputs": [
     {
@@ -1925,8 +1925,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "pleasant-director",
+   "execution_count": 49,
+   "id": "formed-diploma",
    "metadata": {},
    "outputs": [
     {
@@ -2392,8 +2392,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "heavy-essex",
+   "execution_count": 113,
+   "id": "criminal-jerusalem",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2409,18 +2409,87 @@
     "                              'Interest_Earnings','Interest_Earnings_Amount','Retrenchment_Package','Retrenchment_Package_Amount','Inheritances',\n",
     "                              'Inheritances_Amount','Lobola','Lobola_Amount','Gifts','Gifts_Amount','Loan_Repayments','Loan_Repayments_Amount',\n",
     "                              'Sale_Household_Goods','Sale_Household_Goods_Amount','Other_Income','Other_Income_Recipient','Other_Income_Value',\n",
-    "                              'Non_Household_Residents_Contributions','Household_Income_Classification','Household_Income_Step_15_Years',\n",
-    "                              'Household_Income_Step_In_5_Years','Household_Expected_Income_In_5_Years','Income_Inheritance','Income_Job_Payout',\n",
-    "                              'Income_Property_Sale','Income_Financial_Product','Income_Lobola','Income_Other_Payout']]\n",
+    "                              'Household_Income_Classification','Household_Income_Step_15_Years',\n",
+    "                              'Household_Income_Step_In_5_Years','Household_Expected_Income_In_5_Years']]\n",
     "\n",
-    "#print(Income_Details[''].drop_duplicates())\n",
-    "#print(Income_Details.iloc[:,0:])"
+    "Income_Details['Primary_Gross_Income_Month'].fillna(0.0, inplace = True)\n",
+    "Income_Details = Income_Details.replace({'Primary_Gross_Income_Month': {'Missing':0.0 ,'Not applicable': 0.0, 'Refused': 0.0, 'Dont know': 0.0}})\n",
+    "Income_Details['Primary_Net_Income_Month'].fillna(0.0, inplace = True)\n",
+    "Income_Details = Income_Details.replace({'Primary_Net_Income_Month': {'Missing':0.0 ,'Not applicable': 0.0, 'Refused': 0.0, 'Dont know': 0.0}})\n",
+    "\n",
+    "def clean_payment_existence( Income_Details, col1, col2):\n",
+    "    Income_Details[col2] = Income_Details[col2].astype('object')\n",
+    "    Income_Details = Income_Details.replace({col2: {'Missing':0.0 ,'Not applicable': 0.0, 'Refused': 0.0, 'Dont know': 0.0}})\n",
+    "    Income_Details[col2].fillna(0.0, inplace = True)\n",
+    "    for i, v in Income_Details[col2].items():\n",
+    "        if v>0:\n",
+    "            Income_Details[col1][i] = 'Yes'\n",
+    "        else:\n",
+    "            Income_Details[col1][i] = 'No'\n",
+    "    Income_Details[col1] = Income_Details[col1].astype('object').astype('category')\n",
+    "    return Income_Details\n",
+    "\n",
+    "Income_Details = clean_payment_existence( Income_Details, 'Employment_Payment', 'Primary_Gross_Income_Month')\n",
+    "\n",
+    "Income_Details = clean_amount_category(Income_Details, 'Primary_Net_Income_Month', 'Main_Job_Income_Category')\n",
+    "\n",
+    "Income_Details['Work_Week_Hours'].fillna(0.0, inplace = True)\n",
+    "Income_Details = Income_Details.replace({'Work_Week_Hours': {'Missing':0.0 ,'Not applicable': 0.0, 'Refused': 0.0, 'Dont know': 0.0}})\n",
+    "\n",
+    "Income_Details = clean_payment_existence( Income_Details, 'Rec_Share_Profit_Year', 'Share_Profit_Year')\n",
+    "\n",
+    "Income_Details = clean_payment_existence( Income_Details, 'Rec_Share_Profit_Month', 'Share_Profit_Month')\n",
+    "\n",
+    "Income_Details = clean_payment_existence( Income_Details, 'Rec_Bonus_Year', 'Other_Bonus_Year')\n",
+    "\n",
+    "Income_Details = clean_payment_existence( Income_Details, 'Rec_Bonus_Month', 'Other_Bonus_Month')\n",
+    "\n",
+    "Income_Details = clean_payment_existence( Income_Details, 'Rec_Extra_Income_Year', 'Extra_Income_Year')\n",
+    "\n",
+    "Income_Details = clean_payment_existence( Income_Details, 'Rec_Extra_Income_Month', 'Extra_Income_Month')\n",
+    "\n",
+    "Income_Details = clean_payment_existence( Income_Details, 'Have_Secondary_Occupation', 'Secondary_Gross_Income')\n",
+    "\n",
+    "Income_Details = clean_payment_existence( Income_Details, 'Have_Secondary_Occupation', 'Secondary_Net_Income')\n",
+    "\n",
+    "Income_Details = clean_amount_category(Income_Details, 'Secondary_Net_Income', 'Secondary_Income_Category')\n",
+    "\n",
+    "Income_Details = clean_payment_existence(Income_Details, 'Is_Self_Employed', 'Month_Take_Home_Salary')\n",
+    "Income_Details = clean_payment_existence(Income_Details, 'Pension', 'Pension_Amount')\n",
+    "Income_Details = clean_payment_existence(Income_Details, 'Disability_Grant', 'Disability_Grant_Amount')\n",
+    "Income_Details = clean_payment_existence(Income_Details, 'Child_Support', 'Child_Support_Amount')\n",
+    "Income_Details = clean_payment_existence(Income_Details, 'Foster_Care_Grant', 'Foster_Care_Grant_Amount')\n",
+    "\n",
+    "Income_Details = clean_payment_existence(Income_Details, 'Dependency_Grant', 'Dependency_Grant_Amount')\n",
+    "Income_Details = clean_payment_existence(Income_Details, 'Grant_In_Aid', 'Grant_In_Aid_Amount')\n",
+    "Income_Details = clean_payment_existence(Income_Details, 'War_Veterans_Pension', 'War_Veterans_Pension_Amount')\n",
+    "Income_Details = clean_payment_existence(Income_Details, 'UIF', 'UIF_Amount')\n",
+    "Income_Details = clean_payment_existence(Income_Details, 'Workers_Compensation', 'Workers_Compensation_Amount')\n",
+    "\n",
+    "Income_Details = clean_payment_existence(Income_Details, 'Workers_Compensation', 'Workers_Compensation_Amount')\n",
+    "Income_Details = clean_payment_existence(Income_Details, 'Provident_Fund', 'Provident_Fund_Amount')\n",
+    "Income_Details = clean_payment_existence(Income_Details, 'Private_Retirement_Annuity', 'Private_Retirement_Annuity_Amount')\n",
+    "Income_Details = clean_payment_existence(Income_Details, 'Retirement_Package', 'Retirement_Package_Amount')\n",
+    "Income_Details = clean_payment_existence(Income_Details, 'Rental_Income', 'Rental_Income_Amount')\n",
+    "\n",
+    "Income_Details = clean_payment_existence(Income_Details, 'Interest_Earnings', 'Interest_Earnings_Amount')\n",
+    "Income_Details = clean_payment_existence(Income_Details, 'Retrenchment_Package', 'Retrenchment_Package_Amount')\n",
+    "Income_Details = clean_payment_existence(Income_Details, 'Inheritances', 'Inheritances_Amount')\n",
+    "Income_Details = clean_payment_existence(Income_Details, 'Lobola', 'Lobola_Amount')\n",
+    "Income_Details = clean_payment_existence(Income_Details, 'Gifts', 'Gifts_Amount')\n",
+    "\n",
+    "Income_Details = clean_payment_existence(Income_Details, 'Loan_Repayments', 'Loan_Repayments_Amount')\n",
+    "Income_Details = clean_payment_existence(Income_Details, 'Sale_Household_Goods', 'Sale_Household_Goods_Amount')\n",
+    "Income_Details = clean_payment_existence(Income_Details, 'Other_Income', 'Other_Income_Value')\n",
+    "\n",
+    "Income_Details['Household_Expected_Income_In_5_Years'].fillna(0.0, inplace = True)\n",
+    "Income_Details = Income_Details.replace({'Household_Expected_Income_In_5_Years': {'Missing':0.0 ,'Not applicable': 0.0, 'Refused': 0.0, 'Dont know': 0.0}})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "sound-proposal",
+   "id": "speaking-chick",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2439,7 +2508,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "known-closer",
+   "id": "stuffed-madison",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2452,7 +2521,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "innocent-ticket",
+   "id": "floral-bracket",
    "metadata": {},
    "outputs": [
     {
@@ -2486,7 +2555,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "dangerous-accountability",
+   "id": "dutch-distribution",
    "metadata": {},
    "outputs": [
     {
@@ -3562,7 +3631,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "classical-gambling",
+   "id": "latter-chair",
    "metadata": {},
    "outputs": [
     {
@@ -4008,7 +4077,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "characteristic-dylan",
+   "id": "perfect-litigation",
    "metadata": {},
    "outputs": [
     {
@@ -4362,7 +4431,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "eligible-furniture",
+   "id": "searching-canberra",
    "metadata": {},
    "outputs": [
     {
@@ -4406,7 +4475,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "normal-edition",
+   "id": "stock-baking",
    "metadata": {},
    "outputs": [
     {
