--- a/DaeCode.ipynb
+++ b/DaeCode.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "going-husband",
    "metadata": {},
    "source": [
     "# Group Members\n",
@@ -13,6 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "spread-bottle",
    "metadata": {
     "editable": false,
     "nbgrader": {
@@ -47,6 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "forbidden-yesterday",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,6 +64,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "destroyed-fiction",
    "metadata": {},
    "source": [
     "# How personal factors influence income levels and the acquisition of wealth in South Africa\n",
@@ -124,6 +128,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "governing-sleeping",
    "metadata": {},
    "source": [
     "# Reading in the data"
@@ -132,6 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "fewer-subsection",
    "metadata": {},
    "outputs": [
     {
@@ -618,6 +624,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "closed-russian",
    "metadata": {},
    "source": [
     "## Data Description\n",
@@ -638,6 +645,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "rental-contractor",
    "metadata": {},
    "source": [
     "As can be seen above the data set has 30 110 entries each with at most 166 filled columns. \n",
@@ -649,6 +657,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bizarre-calibration",
    "metadata": {},
    "source": [
     "As can be seen in the above the information each column has a set data type that is adhered to throughout the dataset, this means the data present follows a set of decided categories, is a value, or is null. Given the above it can be seen that most columns have null values, this is due to the nature of questioning, there are many factors that a participant may not be part of which are then left null. Included in the dataframe are sample entries which contain null values, given that they have unique house_identifier codes they can be cross-referenced to exisitng entries and be removed if they don't match other entries in the dataframe.\n",
@@ -658,6 +667,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "scenic-optimization",
    "metadata": {},
    "source": [
     "# Data Wrangling"
@@ -665,6 +675,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "future-dubai",
    "metadata": {},
    "source": [
     "The data we will use to model the conditions in which people are born are:\n",
@@ -711,6 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "continental-qatar",
    "metadata": {},
    "outputs": [
     {
@@ -1295,6 +1307,13 @@
     "# Change datatype from object to category\n",
     "Personal_Details['English_Writing_Level'] = Personal_Details['English_Writing_Level'].astype('category')\n",
     "\n",
+    "# Replace values: 'Digree':'Degree','Certificate Of Pumbling':'Certificate Of Plumbing','Tecnical Diploma':'Technical Diploma'\n",
+    "# 'Teology':'Theology','Deploma In Higher Education':'Diploma In Higher Education','Mining Enering':'Mining Engineering'\n",
+    "Personal_Details = Personal_Details.replace({'Father_Highest_Tertiary': {'Digree':'Degree','Certificate Of Pumbling':'Certificate Of Plumbing','Tecnical Diploma':'Technical Diploma',\n",
+    "                                                                        'Teology':'Theology','Deploma In Higher Education':'Diploma In Higher Education','Mining Enering':'Mining Engineering'}})\n",
+    "# Change datatype from object to category\n",
+    "Personal_Details['Father_Highest_Tertiary'] = Personal_Details['Father_Highest_Tertiary'].astype('category')\n",
+    "\n",
     "#calculating then adding age to the Personal_details\n",
     "sample_year = df_filtered['Sample_Origin'].str[:4]\n",
     "sample_year = sample_year.astype(int)\n",
@@ -1307,6 +1326,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "limited-product",
    "metadata": {},
    "source": [
     "# Asset Details Dataframe\n",
@@ -1415,6 +1435,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "popular-craps",
    "metadata": {},
    "outputs": [
     {
@@ -1889,6 +1910,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "early-tackle",
    "metadata": {},
    "source": [
     "# Income Details Dataframe\n",
@@ -2157,6 +2179,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "alike-sudan",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2210,10 +2233,9 @@
     "Income_Details = Income_Details.replace({'Work_Week_Hours': {'Missing':0.0 ,'Not applicable': 0.0, 'Refused': 0.0, 'Dont know': 0.0}})\n",
     "\n",
     "ID_Clean_Payment = [('Rec_Share_Profit_Year', 'Share_Profit_Year'),('Rec_Share_Profit_Month', 'Share_Profit_Month'),\n",
-    "                    ('Rec_Bonus_Year', 'Other_Bonus_Year'), \n",
-    "                   ('Rec_Bonus_Month', 'Other_Bonus_Month'), ('Rec_Extra_Income_Year', 'Extra_Income_Year'),\n",
-    "                   ('Rec_Extra_Income_Month', 'Extra_Income_Month'), ('Have_Secondary_Occupation', 'Secondary_Gross_Income'),\n",
-    "                   ('Have_Secondary_Occupation', 'Secondary_Net_Income')]\n",
+    "                    ('Rec_Bonus_Year', 'Other_Bonus_Year'),('Rec_Bonus_Month', 'Other_Bonus_Month'),\n",
+    "                    ('Rec_Extra_Income_Year', 'Extra_Income_Year'),('Rec_Extra_Income_Month', 'Extra_Income_Month'),\n",
+    "                    ('Have_Secondary_Occupation', 'Secondary_Gross_Income'),('Have_Secondary_Occupation', 'Secondary_Net_Income')]\n",
     "\n",
     "for i in ID_Clean_Payment:\n",
     "    Income_Details = clean_payment_existence(Income_Details, i[0], i[1])\n",
@@ -2243,18 +2265,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
+   "id": "aggressive-syndicate",
    "metadata": {},
    "source": [
     "# Liability Details Dataframe\n",
@@ -2367,6 +2378,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "hourly-kernel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2394,6 +2406,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "hundred-tampa",
    "metadata": {},
    "source": [
     "## Sense checks after cleaning (raw vs cleaned)<br>\n",
@@ -2404,6 +2417,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "civil-affiliate",
    "metadata": {},
    "outputs": [
     {
@@ -2459,6 +2473,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "present-group",
    "metadata": {},
    "outputs": [
     {
@@ -2496,6 +2511,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "silent-identification",
    "metadata": {},
    "outputs": [
     {
@@ -2537,6 +2553,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "sufficient-current",
    "metadata": {},
    "outputs": [
     {
@@ -2594,6 +2611,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "meaningful-attitude",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2644,6 +2662,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "brave-perfume",
    "metadata": {},
    "source": [
     "## 3. Exploratory Analysis\n",
@@ -2652,6 +2671,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "behavioral-screen",
    "metadata": {},
    "source": [
     "### Section 1\n",
@@ -2664,6 +2684,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "charitable-socket",
    "metadata": {},
    "source": [
     "Here we compare the means Possessions Net Value Balance by gender to get a visual overview of the differences. This gives an indication of whether there is a significant difference in the possessions net values between men and women on average and if it may be enough to make gender an important factor in predicting the wealth of an adult in South Africa."
@@ -2672,6 +2693,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
+   "id": "three-zambia",
    "metadata": {},
    "outputs": [
     {
@@ -2706,6 +2728,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
+   "id": "later-engine",
    "metadata": {},
    "outputs": [
     {
@@ -2738,6 +2761,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
+   "id": "adjacent-training",
    "metadata": {},
    "outputs": [
     {
@@ -2760,6 +2784,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "patient-difference",
    "metadata": {},
    "source": [
     "Given the result of a t-test, we find that there are somewhat significant differences across the possessions net value balances of men and women on average. Therefore it gives the idea that gender may indeed be a relevant feature in predicting a person's net possessions balance. However, we will investigate more on this further down the notebook.\n",
@@ -2769,6 +2794,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "allied-climb",
    "metadata": {},
    "source": [
     "In this subsection we analyse the distributions of net possessions balance with respect to race."
@@ -2777,6 +2803,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
+   "id": "particular-costs",
    "metadata": {},
    "outputs": [
     {
@@ -2801,6 +2828,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "brown-graduate",
    "metadata": {},
    "outputs": [
     {
@@ -2839,6 +2867,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "boxed-minneapolis",
    "metadata": {},
    "outputs": [
     {
@@ -2908,6 +2937,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "configured-press",
    "metadata": {},
    "source": [
     "Looking at the violin and cat plots and dataframe, it is clear that the African group contains most of the respondents that have the lowest net possessions balance while the white group contains those with the some of the highest balances. For this reason and that of brevity we will perform a t-test for only these two groups as they are adequate to approximate how race could be a relevant feature when predicting the possessions balance."
@@ -2916,6 +2946,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
+   "id": "isolated-george",
    "metadata": {},
    "outputs": [
     {
@@ -2935,6 +2966,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "south-police",
    "metadata": {},
    "source": [
     "Given the result of a t-test, we find that there are significant differences across the possessions net value balances of people in the African group and those in the White group on average. Therefore, suggesting that race could be a relevant feature in predicting the target label (Possessions_Net_Value_Balance). We will investigate the matter further using predictive modelling.\n",
@@ -2950,6 +2982,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
+   "id": "italian-fiber",
    "metadata": {},
    "outputs": [
     {
@@ -2991,6 +3024,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "gentle-judges",
    "metadata": {},
    "source": [
     "From the MAE results, it appears that the addition of the race and gender features to the chosen feature set improves the predictive accuracy of the model. Therefore, proving the alternate hypothesis that *adding gender and race to the set of variables improves the prediction accuracy of a South African adult's net possessions balance*. Interestingly, race seems to be the most relevant feature when predicting the target label, while gender yields no benefits making it irrelevant when predicting the target in this case."
@@ -2999,6 +3033,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "developmental-census",
    "metadata": {},
    "outputs": [
     {
@@ -3114,6 +3149,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "seventh-glucose",
    "metadata": {},
    "outputs": [
     {
@@ -3137,6 +3173,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "better-shade",
    "metadata": {},
    "source": [
     "#### Interpretation of results and Conclusion\n",
@@ -3148,6 +3185,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "macro-mauritius",
    "metadata": {},
    "source": [
     "### Question 2\n",
@@ -3169,6 +3207,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "digital-contest",
    "metadata": {},
    "outputs": [
     {
@@ -3717,6 +3756,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
+   "id": "precise-mobile",
    "metadata": {},
    "outputs": [
     {
@@ -3758,6 +3798,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "amateur-sound",
    "metadata": {},
    "source": [
     "#### Monthly Salary Analysis\n",
@@ -3769,6 +3810,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "burning-scoop",
    "metadata": {},
    "outputs": [
     {
@@ -4116,6 +4158,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "fewer-inclusion",
    "metadata": {},
    "outputs": [
     {
@@ -4288,6 +4331,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
+   "id": "piano-vehicle",
    "metadata": {},
    "outputs": [
     {
@@ -4329,6 +4373,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "hungry-wireless",
    "metadata": {},
    "source": [
     "#### Possession Analysis\n",
@@ -4339,6 +4384,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
+   "id": "hispanic-cursor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4359,6 +4405,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
+   "id": "laden-devil",
    "metadata": {},
    "outputs": [
     {
@@ -4400,6 +4447,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "optimum-plaza",
    "metadata": {},
    "source": [
     "#### Cohabitation and Marriage vs Net Possessions analysis\n",
@@ -4409,6 +4457,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "certain-account",
    "metadata": {},
    "source": [
     "### Overall heatmap"
@@ -4417,6 +4466,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
+   "id": "micro-fellowship",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4437,6 +4487,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
+   "id": "loose-germany",
    "metadata": {},
    "outputs": [
     {
@@ -4482,6 +4533,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
+   "id": "alone-point",
    "metadata": {},
    "outputs": [
     {
@@ -4526,6 +4578,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "engaging-indonesian",
    "metadata": {},
    "source": [
     "# 3) The household's level of education determines the income bracket they can achieve and their ability to generate wealth.\n",
@@ -4552,12 +4605,16 @@
     "    18) Other_Currently_Enrolled_School\n",
     "    19) Computer_Literate\n",
     "    20) English_Reading_Level\n",
-    "    21) English_Writing_Level"
+    "    21) English_Writing_Level\n",
+    "    \n",
+    "*Methodology:*<br>\n",
+    "The personal details are combined with the income details to create a new dataframe with the processed data. All the yearly incomes are added and stored in the \"Net_Sum\" column. All the amounts for the columns relating to the mother's degree are added and stored in the \"Mother_Degree\" column. The column that will be predicted, \"Net_Sum_Category\", is calculated and created from the \"Primary_Net_Income_Year\" column."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 32,
+   "id": "hungarian-pepper",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4603,6 +4660,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
+   "id": "affected-creature",
    "metadata": {},
    "outputs": [
     {
@@ -4771,8 +4829,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "married-lawsuit",
+   "metadata": {},
+   "source": [
+    "Mother Degrees: A mother that has a degree makes the most money.<br>\n",
+    "Mother Highest Tertiary: Mothers with a masters/doctorate made the most money.<br>\n",
+    "Father Highest Tertiary: People with a degree made the most money.<br>\n",
+    "English Reading Level: People that weren't very good at reading made the most money.<br>\n",
+    "English Writing Level: People that weren't very good at writing made the most money.<br>\n",
+    "Computer Literate: People that are computer literate made the most money.<br>\n",
+    "Highest Tertiary Completed: People that had a masters/doctorate degree made the most money.<br>\n",
+    "Tertiary Completed: People that finished tertiary made the most money.<br>\n",
+    "Highest Grade Completed Pass Type: People that passed with a bachelors pass made the most money.<br>\n",
+    "Math Highest Grade Completed: People who finished grade 12 made the most money.<br>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
+   "id": "supreme-apollo",
    "metadata": {},
    "outputs": [
     {
@@ -4802,8 +4878,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "serial-geometry",
+   "metadata": {},
+   "source": [
+    "To train a linear regression model, 30% of the data was reserved for testing. Dummy variables were created for all the columns to allow for easy input. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 35,
+   "id": "distinct-level",
    "metadata": {},
    "outputs": [
     {
@@ -4857,6 +4942,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
+   "id": "about-technique",
    "metadata": {},
    "outputs": [
     {
@@ -4894,6 +4980,18 @@
     "model1_accuracy = model.score(X_test, y_test)*100\n",
     "print('The model is ',model1_accuracy,'% accurate.')\n",
     "print(classification_report(y_test, model.predict(X_test)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "equal-pixel",
+   "metadata": {},
+   "source": [
+    "#### Interpretation of results and Conclusion\n",
+    "From the results above, we can see that the majority class scored a 74% accuracy. The rest of the classes were too small to be significant. The runner up class scored a 53% accuracy. Given the differences in population between the categories, it was natural for the model to be skewed towards the class with the highest population.\n",
+    "\n",
+    "The graph above shows which attributes in which characteristics of a household contribute to a high income. These graphs and results do not necessarily account for the population in each category. One person in one of the highest brackets can make up 5000 people in the lowest bracket. \n",
+    "***"
    ]
   }
  ],
